fixed span alignment

--- a/src/Components/Home/Main/FAQS.module.css
+++ b/src/Components/Home/Main/FAQS.module.css
@@ -1,4 +1,3 @@
-
 /** @format */
 
 footer {
@@ -96,6 +95,7 @@ footer .footer .container h3 button img {
 
 footer .footer .container h3 button span {
   font-size: 1.1rem;
+  text-align: left;
 }
 
 footer .footer .container .details {
@@ -119,103 +119,6 @@ footer .footer .container .details span {
   -webkit-transition: all 0.25s cubic-bezier(0.5, 0, 0.1, 1);
 }
 
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 1rem auto 0;
-  padding: 0 1.5rem;
-}
-
-.emailContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  height: 3rem;
-  background-color: rgba(24, 20, 20, 0.648);
-  border: rgb(100, 97, 97) 1px solid;
-  border-radius: 4px;
-  color: rgb(255, 245, 245);
-  font-size: 16px;
-}
-.emailContainer input {
-  background-color: transparent;
-  font-size: 16px;
-  align-self: start;
-  height: 100%;
-  width: 100%;
-  outline: none;
-  border: none;
-  padding: 1.25rem 0rem 0.4rem;
-  text-indent: 1rem;
-  line-height: 1.5rem;
-}
-
-.emailContainer input:focus {
-  margin-top: 5px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-  color: white;
-}
-
-.emailContainer label {
-  position: absolute;
-  top: 0.6rem;
-  left: 0.9rem;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 16px;
-}
-.emailContainer input:focus ~ label {
-  transform: translateY(-10px);
-  font-size: 12px;
-  margin-bottom: 10px;
-  transition: 250ms cubic-bezier(0.5, 0, 0.1, 1) 0s;
-}
-.emailContainer input:not(:focus) ~ label {
-  transition: 250ms cubic-bezier(1, 0.1, 0, 0.5) 0s;
-}
-
-form .form a {
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 1rem;
-  font-weight: 700;
-  text-align: center;
-  background-color: #e50914;
-  color: white;
-  border: transparent 1px solid;
-  border-radius: 4px;
-  padding: 7px 16px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 0.8rem 1rem;
-  margin-top: 1rem;
-}
-
-@media (min-width: 768px) {
-  .form {
-    flex-direction: row;
-    justify-content: center;
-    margin: 1rem auto 0;
-    padding: 0 4.8rem;
-  }
-
-  form .form a {
-    margin: 0 0 0 0.5rem;
-    margin-top: 0;
-    white-space: nowrap;
-  }
-  form .form a span.text {
-    white-space: nowrap;
-  }
-}
 
 @media (min-width: 960px) {
   footer .footer h2 {
@@ -242,8 +145,8 @@ form .form a {
   }
 }
 
-@media(min-width:1440px){
-    footer .footer {
+@media (min-width: 1440px) {
+  footer .footer {
     max-width: calc(83% - 6rem);
   }
 }
