--- a/src/Components/Loginpage/Footer.module.css
+++ b/src/Components/Loginpage/Footer.module.css
@@ -40,3 +40,13 @@
   font-size: 13px;
   text-decoration: none;
 }
+
+@media (min-width: 740px) {
+  .siteFooter .linksContainer {
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    text-align: left;
+  }
+}
