--- a/src/Components/Loginpage/Header.module.css
+++ b/src/Components/Loginpage/Header.module.css
@@ -5,8 +5,26 @@
   border: 0;
   display: flex;
   flex-direction: row;
+  position: relative;
 }
 .loginHeader a {
   margin-left: 3%;
   display: flex;
+}
+
+@media (min-width: 740px) {
+  .loginHeader {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0, transparent);
+    border-bottom: transparent;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+
+  .loginHeader a svg {
+    height: 148px;
+    vertical-align: middle;
+    width: 167px;
+  }
 }
