--- a/src/Components/Loginpage/Main.module.css
+++ b/src/Components/Loginpage/Main.module.css
@@ -4,8 +4,9 @@
   color: #333;
   margin: 0 auto;
   padding: 0 5%;
+  position: relative;
 }
-.loginBody a{
+.loginBody a {
   text-decoration: none;
 }
 
@@ -37,15 +38,22 @@
 /* email input styles*/
 .loginForm .emailData {
   padding-bottom: 16px;
+  border: none;
+  outline: none;
 }
 .emailContainer {
   max-width: 100%;
   position: relative;
 }
 
+.emailContainer:focus {
+  border: none;
+  outline: none;
+}
 .emailContainer .emailInput {
   background-color: #333;
   border: 0;
+  outline: none;
   border-radius: 4px;
   color: #fff;
   height: 50px;
@@ -59,13 +67,15 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border: 1px solid #8c8c8c;
+  background-color: #6f6d6d82;
   border-radius: 2px;
   box-sizing: border-box;
   display: block;
   font-size: 16px;
   height: 50px;
   padding: 16px 20px 0;
+  outline: none;
+  border: none;
 }
 
 .emailContainer .emailInput:focus ~ label {
@@ -76,12 +86,12 @@
   left: 20px;
 }
 
-.emailContainer .inputPlaceholder {
+.emailContainer label.inputPlaceholder {
   color: #8c8c8c;
   font-size: 14px;
   left: 20px;
   position: absolute;
-  top: 30%;
+  top: 50%;
   transform: translateY(-50%);
   transition: font 0.1s ease, top 0.1s ease, transform 0.1s ease;
 }
@@ -128,7 +138,7 @@
   transform: translateY(-50%);
   transition: font 0.1s ease, top 0.1s ease, transform 0.1s ease;
 }
-
+/*-----------------------------------------------------------------------------
 /*password input styles*/
 
 .loginForm {
@@ -156,7 +166,8 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border: 1px solid #8c8c8c;
+  border: transparent;
+  outline: none;
   border-radius: 2px;
   box-sizing: border-box;
   display: block;
@@ -188,7 +199,6 @@
   position: relative;
   padding-bottom: 16px;
 }
-
 
 .passwordContainer .passwordInput {
   background-color: #333;
@@ -233,11 +243,11 @@
   transition: font 0.1s ease, top 0.1s ease, transform 0.1s ease;
 }
 
-.passwordContainer .passwordVisibleBtn {
+.passwordContainer .toggleBtn {
   position: absolute;
   top: -50%;
   transform: translateY(50%);
-  left: 82%;
+  left: 75%;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -249,6 +259,7 @@
   font-size: 14px;
   height: 50px;
   padding: 0 12px;
+  box-sizing: border-box;
 }
 
 .passwordErrorMsg {
@@ -374,4 +385,32 @@ input.passwordHasValue:not(:focus) ~ label {
   font-size: 10px;
   top: 20%;
   left: 20px;
+}
+
+@media (min-width: 740px) {
+  .loginBody {
+    background-color: transparent;
+    margin: 0 auto -236px;
+    max-width: 450px;
+    min-height: 100vh;
+  }
+
+  .loginBody::before {
+    content: "";
+    display: block;
+    height: 91px;
+  }
+  .loginBody::after {
+    content: "";
+    display: block;
+    height: 236px;
+  }
+  .loginBody div.loginContent {
+    min-height: 660px;
+  }
+  div.loginFormMain {
+    margin-bottom: 90px;
+    min-height: 625px;
+    padding: 60px 68px 40px;
+  }
 }
